[metadata]
name = pybitcoin-denniscm190
version = 0.0.1
author = Dennis Concepción Martín
author_email = dennisconcepcionmartin@gmail.com
description = A simple Python wrapper for Bitcoin JSON-RPC API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denniscm190/pybitcoin
project_urls =
    Bug Tracker = https://github.com/denniscm190/pybitcoin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src